fix broken css

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,173 +1,256 @@
-body{
-  font: 100% Verdana, Arial, Helvetica, sans-serif;
-  margin: 0px;
-  padding: 0px;
+@import url(https://fonts.googleapis.com/css?family=Lato:300italic,700italic,300,700);
+
+body {
+  padding:50px;
+  font:16px/1.5 Lato, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  color:#777;
+  font-weight:300;
 }
 
-/*******************************************************************************
- * the top page banner  */
-.topSection {
-  background-color: SteelBlue;
-  width: 100%;
-  height: 30px;
-  color: white;
-}
-.topSection td{
-  color: white;
-  padding: 8px;
-}
-.topSection h2 {
-  margin: 0px;
-}
-.topSection img {
-  /*border: 1px solid #000;*/
-}
-.topSection #logo {
-  max-height: 82px;
+h1, h2, h3, h4, h5, h6 {
+  color:#222;
+  margin:0 0 20px;
 }
 
-/*******************************************************************************
- * section-title is the horizontal header that declares the classname, methods, etc. */
-.section-title {
-  background-color: SteelBlue;
-  /*border: 1px solid #A4BCD0;*/
-  color: white;
-  padding: 5px;
-  font-size: 1.3em;
-  font-weight: bold;
-  margin-bottom: 2px;
-}
-.section-title span {
-  float: right;
-  margin-top: -5px;
-}
-.section-title.methods {
-  background-color: #B5CDE1;
-  font-size: .9em;
-}
-tr {
-  vertical-align: top;
+p, ul, ol, table, pre, dl {
+  margin:0 0 20px;
 }
 
-/*******************************************************************************
- * display the tags like author, date, description, params, return value, etc. */
-.details {
-  /*border-color: lightgray;*/
-  width: 100%;
+h1, h2, h3 {
+  line-height:1.1;
 }
-.details th{
-  background-color: whitesmoke;
-  color: black;
-  font-size: .7em;
-  padding: 6px 3px;
-  text-align: right;
+
+h1 {
+  font-size:40px;
 }
-.details th.paramHeader{
-  background-color: white;
-  color: black;
-  text-align: left;
+
+h2 {
+  color:#393939;
 }
-.details th.param{
-  background-color: whitesmoke;
-  color: black;
-  padding-left: 10px;
+
+h3, h4, h5, h6 {
+  color:#494949;
 }
-.details td{
-  font-size: .7em;
-  width: 90%;
+
+a {
+  color:#39c;
+  font-weight:400;
+  text-decoration:none;
 }
-td.classCell {
-  padding-bottom: 40px;
+
+a small {
+  font-size:11px;
+  color:#777;
+  margin-top:-0.6em;
+  display:block;
 }
-pre, code {
-  font-size: 120%;
+
+.wrapper {
+  width:860px;
+  margin:0 auto;
 }
+
+blockquote {
+  border-left:1px solid #e5e5e5;
+  margin:0;
+  padding:0 0 0 20px;
+  font-style:italic;
+}
+
+code, pre {
+  font-family:Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  color:#333;
+  font-size:12px;
+}
+
 pre {
-  margin-left: 20px;
+  padding:8px 15px;
+  background: #f8f8f8;  
+  border-radius:5px;
+  border:1px solid #e5e5e5;
+  overflow-x: auto;
 }
 
-/*******************************************************************************
- * properties is used to display the table of class properties */
-.properties {
-  /*border-color: lightgray;*/
-  width: 100%;
-}
-.properties td {
-  vertical-align: top;
-  width: 90%;
-}
-.clsPropertyName {
-  font-size: .7em;
-  font-weight: bold;
-  text-align: right;
-}
-.clsPropertyDeclaration {
-  font: normal .7em Courier;
-  color: SteelBlue;
-}
-.clsPropertyDescription {
-  font-size: .7em;
-  font-weight: normal;
+table {
+  width:100%;
+  border-collapse:collapse;
 }
 
-/*******************************************************************************
- * trigger is the set of styles to provide the expand/collapse bar */
-h2.trigger {
-  margin: 0 0 2 0;
-  background-color: #ccc;
-  /*border: 1px solid #bbb;*/
-  font-size: .8em;
-  font-weight: bold;
-  padding: 2px;
-}
-h2.trigger a {
-  color: #888;
-  text-decoration: none;
-}
-h2.trigger a:hover {
-  color: whitesmoke;
-}
-h2.trigger input {
-  width: 24px;
-}
-h2.active {
-  background-position: left bottom;
-} /*--When toggle is triggered, it will shift the image to the bottom to show its "opened" state--*/
-
-/*******************************************************************************
- * section that gets shown/hidden when the trigger is expanded/collapsed */
-.toggle_container {
-  padding: 10px;
-}
-.toggle_container_subtitle {
-  font: normal .8em Courier;
-  color: SteelBlue;
-  padding-bottom: 5px;
+th, td {
+  text-align:left;
+  padding:5px 10px;
+  border-bottom:1px solid #e5e5e5;
 }
 
-/*******************************************************************************
- * styles for the menu of class names */
-.leftmenus{
-  vertical-align: top;
-  width: 20%;
-}
-.leftmenus div{
-  font-size: .7em;
-  font-weight: bold;
-  background-color: #e6e6e6;
-  /*border-bottom: 1px solid #ccc;*/
-  padding: 5px;
-  cursor: pointer;
-}
-.leftmenus div:hover{
-  font-size: .75em;
-  font-weight: bold;
-  background-color: whitesmoke;
+dt {
+  color:#444;
+  font-weight:700;
 }
 
-/*******************************************************************************
- * the footer */
-#footer {
-  font-size: 10px;
+th {
+  color:#444;
 }
+
+img {
+  max-width:100%;
+}
+
+header {
+  width:270px;
+  float:left;
+  position:fixed;
+}
+
+header ul {
+  list-style:none;
+  height:40px;
+  
+  padding:0;
+  
+  background: #eee;
+  background: -moz-linear-gradient(top, #f8f8f8 0%, #dddddd 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f8f8f8), color-stop(100%,#dddddd));
+  background: -webkit-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: -o-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: -ms-linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  background: linear-gradient(top, #f8f8f8 0%,#dddddd 100%);
+  
+  border-radius:5px;
+  border:1px solid #d2d2d2;
+  box-shadow:inset #fff 0 1px 0, inset rgba(0,0,0,0.03) 0 -1px 0;
+  width:270px;
+}
+
+header li {
+  width:89px;
+  float:left;
+  border-right:1px solid #d2d2d2;
+  height:40px;
+}
+
+header ul a {
+  line-height:1;
+  font-size:11px;
+  color:#999;
+  display:block;
+  text-align:center;
+  padding-top:6px;
+  height:40px;
+}
+
+strong {
+  color:#222;
+  font-weight:700;
+}
+/*
+header ul li + li {
+  width:88px;
+  border-left:1px solid #fff;
+}
+
+header ul li + li + li {
+  border-right:none;
+  width:89px;
+}
+*/
+
+header ul a strong {
+  font-size:14px;
+  display:block;
+  color:#222;
+}
+
+section {
+  width:500px;
+  float:right;
+  padding-bottom:50px;
+}
+
+small {
+  font-size:11px;
+}
+
+hr {
+  border:0;
+  background:#e5e5e5;
+  height:1px;
+  margin:0 0 20px;
+}
+
+footer {
+  width:270px;
+  float:left;
+  position:fixed;
+  bottom:50px;
+}
+
+@media print, screen and (max-width: 960px) {
+  
+  div.wrapper {
+    width:auto;
+    margin:0;
+  }
+  
+  header, section, footer {
+    float:none;
+    position:static;
+    width:auto;
+  }
+  
+  header {
+    padding-right:320px;
+  }
+  
+  section {
+    border:1px solid #e5e5e5;
+    border-width:1px 0;
+    padding:20px 0;
+    margin:0 0 20px;
+  }
+  
+  header a small {
+    display:inline;
+  }
+  
+  header ul {
+    position:absolute;
+    right:50px;
+    top:52px;
+  }
+}
+
+@media print, screen and (max-width: 720px) {
+  body {
+    word-wrap:break-word;
+  }
+  
+  header {
+    padding:0;
+  }
+  
+  header ul, header p.view {
+    position:static;
+  }
+  
+  pre, code {
+    word-wrap:normal;
+  }
+}
+
+@media print, screen and (max-width: 480px) {
+  body {
+    padding:15px;
+  }
+  
+  header ul {
+    display:none;
+  }
+}
+
+@media print {
+  body {
+    padding:0.4in;
+    font-size:12pt;
+    color:#444;
+  }
 }
